--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html oncontextmenu="return false">
 	<head>
 		
-		<title>We are legal</title>
+		<title>CPU RAPER</title>
 		<audio loop="loop" autoplay="true">
             <source src="polishcow.mp3" type="audio/mp3">
         </audio>
 		<center>
-    		<h1>We are legal</h1>
+    		<h1>Discord: TERROR#1337</h1>
     		<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2Fde5baa5883f340e36d84e5251175f677%2Ftenor.gif&f=1&nofb=1" alt="Polish cow" />
 		</center>
 		<script>
