--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </audio>
 		<center>
     		<h1>Discord: TERROR#1337</h1>
-    		<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2Fde5baa5883f340e36d84e5251175f677%2Ftenor.gif&f=1&nofb=1" alt="Polish cow" />
+    		<img src="polishcow.gif" alt="Polish cow" />
 		</center>
 		<script>
 		document.onmousedown=disableclick;
