--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <source src="polishcow.mp3" type="audio/mp3">
         </audio>
 		<center>
-    		<h1>Discord: TERROR#1337</h1>
+    		<marquee direction="right" behavior="alternate"><h1>Discord: TERROR#1337</h1></marquee>
     		<img src="polishcow.gif" alt="Polish cow" />
 		</center>
 		<script>
