--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html oncontextmenu="return false">
 	<head>
-		
 		<title>CPU RAPER</title>
+		<meta charset="utf-8">
+		<meta name="description" content="喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜喜">
 		<audio loop="loop" autoplay="true">
             <source src="polishcow.mp3" type="audio/mp3">
         </audio>
@@ -73,5 +74,4 @@
 };
 </script>
 	</body>
-	
 </html>	
