--- a/index.html
+++ b/index.html
@@ -2,39 +2,22 @@
 	<head>
 		<title>CPU RAPER</title>
 		<meta charset="utf-8">
-		<meta name="description" content="::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
-::::::::::::::::::::::::::::::::::::::::::::::-......----:::::::::::::::::::::::::::::::::::::::::::
-::::::::::::::::::::::::::::::::::::::::::::--.........-..--::::::::::::::::::::::::::::::::::::::::
-:::::::::::::::::::::://++oo++::::::::::::odNd:--..--.......-:::::::::::::::::::::::::::::::::::::::
-::::::::::::::::::::oydmNNNNNNNmho/::::::sNNNmmNds:..........--:::::::::::::::::::::::::::::::::::::
-:::::::::::::::::::yNNNNNNNNNNNMMMNs/:/ymNmmddmmmNNh:-..........----::::::::::::::::::::::::::::::::
-:::::::::::::::::::omNNNNNNNNNNNNMNNmmNNmmmmNNNmdmmmm+--.............-:/++//::::::::::::::::::::::::
-:::::::::::::::::---:smNNNNNNNNNNNNMMMNmmNmmmmmmmmmmmNs--..-------....oNNNNNdyo/::::::::::::::::::::
-:::::::::::::::::-----:odNNNNNNNNNNMMMMNNNNNNho+mmmmmmms-...-------...ydNNNNNNNms:::::::::::::::::::
-:::::::::::::::::--------/ymNNNNNNNNMMNmNNNmmmhyddddmNNNd:---------.-:mmNNNNNNNNh:::::::::::::::::::
-::::::::::::::::::::-------:ohNNNNNNmmmNNNddddmddmmmmmNNNh-----------smdNNNNNNdo::::::::::::::::::::
-::::::::::::::::::::::------.--://:---.ymdyydmmmmmmmmmmmmNs-----------smNNNms/----::::::::::::::::::
-::::::::::::::::::::::------........../ddhysyhdmmmmmdddmmNN+-----------+ys+-.------:::::::::::::::::
-::::::::::::::::::::::------........:hmdhdhyyhddmmmmdmmmmNNd/:::--------.....--------:::::::::::::::
-:::::::::::::::::::::------........sNmhyhdhhhhdddmmmmddmmmmNd:------------....--------::::::::::::::
-:::::::::::::::::::::---..........yNmdhhyhhhhhhddmmmmmmmmmmms--::::---:----....--------:::::::::::::
-::::::::::::::::::::-----ohhyoo-:hNNmdhdhhhhhyymdmmmmmmmNmmmd/--::::--:-::--....--------::::::::::::
-::::::::::::::::::::----hNmddh-+mmNNNddddhhhhysdmmNNmmNNNNmmmo--:::::-:::-----....-------:::::::::::
-::::::::::::::::::::--.:mNmhy.:ddmmNNmdmdhyssosydmNNNNNNNNmmh:--:::::::::::----...------::::::::::::
-:::::::::::::::::::---.-mddd:/hdmmmmmddmh+yoshddddmmNNNNNmNmh/---::::::::::::::--.-----:::::::::::::
-:::::::::::::::::::---.:dddsodddmmmmdmmmd-ohhhdhddddmmmmmmmd/----::::::://///:::::---:::::::::::::::
-:::::::::::::::::::--..oddh/hhdmmmmmdmmmd--hmddhhdddddhhmNNm+:--:::////////////:::::::::::::::::::::
-::::::::::::::::::---.:dddhyhdmmmmmdmmmmm/.-smmdhddhyyhhhmmh+::::////:://+++++oo///+++/:::::::::::::
-::::::::::::::::::---.odddhdhdNNNNmmmmmmd/-.-/sdmhdysyhhyo+//::://:///+oyhhdddhdyssoosyo-:::::::::::
-:::::::::::::::::-----dmmmdmdNNMNNmNNmmms--:--:+soshsy+:-::///:///:/+oydddmmdddmmmmmdmmmh+::::::::::
-::::::::::::::::-----:mNmmmdmNNNNNNNNmmmy-:://::///:::::-::///:////osoodNmmmmdhhdmmmmmmmds::::::::::
-::::::::::::::::-----:NNNmmmNNNNNNNNNmmms:://///////:-::--:///////+shhyodNNMmNmmddmmmdddh+::::::::::
-:::::::::::::::::----:mddNNNNNNMNMMNNddmd////////hdyo+:---:/:///:/++sydhdmmddmddddmmddmd+:::::::::::
-:::::::::::::::::::---ymodNMMMMMMMMMmddmN+//////dNNMMNmy--:::/++///+oo++shhmmmddddddddh:::::::::::::
-:::::::::::::::::::::-:ds/hhNNMMMMMMNNNds::///+dNmmsoms----::/+++++++oosmdhdmmmdhyhhhh+-::::::::::::
-::::::::::::::::::::::::/:/soNMMNNMNNdy:--:::+mNo//:/+--------:///+++++sddddhhyssyys+:::::::::::::::
-::::::::::::::::::::::::--::+/hNNMNNm//:--:::sho::::-------------:/+ooosyhyssoo+:---::::::::::::::::
-:::::::::::::::::::::::::::----:/shy/::/:--::///::----::::::::::-::::/+++//:::::::::::::::::::::::::">
+		<meta name="description" content=":::::::::::::::::::::::----:::::::::::::::::::::::
+:::::::::::/+++/:::::os:-....-::::::::::::::::::::
+:::::::::+dNNNNNds/+hNmmds-....--:::::::::::::::::
+::::::::::smNNNNNNNNmmmdmmd/..---.-shhs+/:::::::::
+:::::::::--:ohmNNNNNNmmyddmm+----.-dNNNm+:::::::::
+:::::::::::---/ooo+smhdmmmmmm/----:hmds/-:::::::::
+:::::::::::---...-ohdyhdmmdmmd:-----:-.----:::::::
+::::::::::---::--hmhhhhddmmmmmo-:----..-----::::::
+::::::::::--hdy/dNmdhhyymNmNNms-:::::--..---::::::
+::::::::::--md+hmmmmssyhdmmNNm+--::::::----:::::::
+:::::::::--/dyhmmmmms+ddhdhhmm/::///////::::::::::
+:::::::::--hdddNNmmmo-:shhyso+/:///oyhhhyyyy/:::::
+::::::::---NmmmNNNmm+:////::-:///+symNmdmmmmy:::::
+:::::::::--ddNNMMMmms///ydyo-:///+syddmddddh/:::::
+:::::::::::++ymMMMNy///hhss/--:/+++odddhyys:::::::
+::::::::::::::/shdo:-:/o:----:--:/+oso+/::::::::::">
 		<audio loop="loop" autoplay="true">
             <source src="polishcow.mp3" type="audio/mp3">
         </audio>
