--- a/index.html
+++ b/index.html
@@ -2,22 +2,8 @@
 	<head>
 		<title>CPU RAPER</title>
 		<meta charset="utf-8">
-		<meta name="description" content=":::::::::::::::::::::::----:::::::::::::::::::::::
-:::::::::::/+++/:::::os:-....-::::::::::::::::::::
-:::::::::+dNNNNNds/+hNmmds-....--:::::::::::::::::
-::::::::::smNNNNNNNNmmmdmmd/..---.-shhs+/:::::::::
-:::::::::--:ohmNNNNNNmmyddmm+----.-dNNNm+:::::::::
-:::::::::::---/ooo+smhdmmmmmm/----:hmds/-:::::::::
-:::::::::::---...-ohdyhdmmdmmd:-----:-.----:::::::
-::::::::::---::--hmhhhhddmmmmmo-:----..-----::::::
-::::::::::--hdy/dNmdhhyymNmNNms-:::::--..---::::::
-::::::::::--md+hmmmmssyhdmmNNm+--::::::----:::::::
-:::::::::--/dyhmmmmms+ddhdhhmm/::///////::::::::::
-:::::::::--hdddNNmmmo-:shhyso+/:///oyhhhyyyy/:::::
-::::::::---NmmmNNNmm+:////::-:///+symNmdmmmmy:::::
-:::::::::--ddNNMMMmms///ydyo-:///+syddmddddh/:::::
-:::::::::::++ymMMMNy///hhss/--:/+++odddhyys:::::::
-::::::::::::::/shdo:-:/o:----:--:/+oso+/::::::::::">
+		<meta name="description" content="Discord: TERROR#1337
+						  Do not enter this link">
 		<audio loop="loop" autoplay="true">
             <source src="polishcow.mp3" type="audio/mp3">
         </audio>
