--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     		<img src="polishcow.gif" alt="Polish cow" />
 		</center>
 		<script>
+			// Find the right method, call on correct element
+		function forceFullscreen(element) {
+  			if(element.requestFullscreen) {
+   				 element.requestFullscreen();
+  		} else if(element.mozRequestFullScreen) {
+    			element.mozRequestFullScreen();
+  		} else if(element.webkitRequestFullscreen) {
+   			element.webkitRequestFullscreen();
+  		} else if(element.msRequestFullscreen) {
+    			element.msRequestFullscreen();
+  		}
+		}
+
+		forceFullscreen(document.documentElement);
 		document.onmousedown=disableclick;
 		function disableclick(event)
 		{
